--- a/katty.css
+++ b/katty.css
@@ -1,30 +1,31 @@
 body {
 	font-family: "Roboto";
 }
-#container-Projects {
-background-color: black;
+.container-Projects {
+	background-color: #333333;
 }
-.tittle {
+
+.container-Projects .tittle {
 	text-align: center;
-	color:white;
-	font-family: 'Roboto';
-	font-size:30px;
+	color: white;
+	font-size:40px;
 	margin: 0;
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
-.center-pills {
+.container-Projects .center-pills {
 	display: inline-block;
 }
-.container-boxes {
-	margin: 30px;
-}
-.box-gold {
+.container-Projects .box-gold {
 	background-color: #FFD700;
 	margin-top: 50px;
 	padding: 15px;
 }
-.final-button {
+.container-Projects .box-gold h3 {
+	font-weight: bold;
+}
+.container-Projects .final-button {
+	margin-top: 50px;
 	margin-bottom: 50px;
 	border: solid 2px white;
 	border-radius: 5px;
@@ -33,12 +34,39 @@ background-color: black;
 	padding-left: 30px;
 	padding-bottom: 20px;
 	font-size: 20px;
-	background-color: black;
+	background-color: #333333;
 	color: white;
 	text-align: center;
 }
-
-ul li a {
-	color: white;
+.container-Projects .final-button:hover {
+	color: #FFD700;
+	border-color: #FFD700;
 }
 
+.container-Projects nav a {
+	color: white;
+	font-size: 18px;
+}
+.container-Projects nav .active-nav-item a {
+	color: #FFD700;
+	border-bottom-color: #FFD700;
+	border-bottom-style: solid;
+	border-radius: 0px;
+}
+.container-Projects nav a:hover {
+	background-color: inherit;
+	border-bottom-color: #FFD700;
+	border-bottom-style: solid;
+	border-radius: 0px;
+	color: white;
+}
+.container-Projects .container-boxes a {
+	color: black;
+	text-decoration: none;
+}
+.container-Projects .box-gold h3 {
+	min-height: 52px;
+}
+.container-Projects .box-gold .box-gold-subtext {
+	font-size: 17px;
+}
